# Hackathon-0-Autonomous-FTEs

./: .env.example  .gitignore  .mcp.json  Business_Goals.md  CLAUDE.md  Company_Handbook.md  Dashboard.md  README.md  pyproject.toml
.claude/skills/approval-executing/: SKILL.md
.claude/skills/audit-logging/: SKILL.md
.claude/skills/dashboard-updating/: SKILL.md
.obsidian/: workspace.json
Docs/: 00_Overview.md  01_Prerequisites_Setup.md  02_Tier_Bronze.md  03_Tier_Silver.md  04_Tier_Gold.md  05_Tier_Platinum.md  06_Architecture.md  07_Watcher_Architecture.md  08_MCP_Configuration.md  09_Ralph_Wiggum_Loop.md  10_Business_Handover.md  11_Security_Privacy.md  12_Error_Recovery.md  13_Example_Invoice_Flow.md  14_Troubleshooting_FAQ.md  15_Ethics.md  16_Learning_Resources.md  17_Hackathon_Rules.md  18_Suggested_Skills.md
Implementation_Plans/Bronze/: 01_folder_structure_and_watcher.md  02_gmail_watcher.md
Implementation_Plans/Silver/: 01_whatsapp_watcher.md  02_discord_watcher.md  03_linkedin_watcher_and_poster.md  04_email_send_mcp_server.md  05_silver_agent_skills.md  06_task_scheduler_and_orchestrator.md
Scripts/: README.md  base_watcher.py  discord_watcher.py  filesystem_watcher.py  gmail_auth.py  gmail_watcher.py  linkedin_auth.py  linkedin_post_trigger.py  linkedin_poster.py  linkedin_watcher.py  orchestrator.py  pm2.config.js  start-hidden.vbs  whatsapp_watcher.py
Scripts/task-scheduler/: discord_watcher.xml  gmail_watcher.xml  linkedin_post_schedule.xml  linkedin_watcher.xml  pm2_startup.xml  whatsapp_watcher.xml
(+10 files in other folders)
